# PET-GAME

./: CMakeLists.txt  main.cpp  run.sh
src/window/: mainwindow.cpp
src/window/include/: window.h
